--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Фри-пек Менаџмент",
     "short_name": "Фри-пек",
-    "start_url": "https://fripekapp.mk/",
+    "start_url": "/",
     "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
@@ -10,13 +10,13 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "https://fripekapp.mk/images/icon-192x192.png",
+            "src": "/images/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "https://fripekapp.mk/images/icon-512x512.png",
+            "src": "/images/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
