--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
 {
+    "id": "/install-app",
     "name": "Фри-пек Менаџмент",
     "short_name": "Фри-пек",
-    "start_url": "/",
+    "start_url": "/install-app",
     "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
