--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,24 @@
 {
     "id": "/",
-    "name": "Фри-пек Менаџмент",
-    "short_name": "Фри-пек",
+    "name": "Fripek App",
+    "short_name": "Fripek",
     "start_url": "/",
     "scope": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#ffffff",
+    "theme_color": "#000000",
     "description": "Фри-пек Систем за Менаџмент",
     "orientation": "any",
     "icons": [
         {
             "src": "/images/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any"
+            "type": "image/png"
         },
         {
             "src": "/images/icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any"
+            "type": "image/png"
         }
     ],
     "screenshots": [
